<resources>
    <string name="app_name">My Craftsman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">My Craftsman</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="not_registred_register_now">Not registred? Register now!</string>
    <string name="ur_status">Status</string>
    <string name="ur_date">Date</string>
    <string name="ur_craftsman">Craftsman</string>
    <string name="ur_description">Description</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_craftsman">Search craftsman</string>
    <string name="logout">Logout</string>
    <string name="repair_requests">Repair requests</string>
    <string name="rr_client">Client :</string>
    <string name="rr_craftsman">Craftsman :</string>
    <string name="rr_district">District :</string>
    <string name="rr_address">Address :</string>
    <string name="rr_description">Description :</string>
    <string name="rr_status">Status :</string>
    <string name="rr_paid">Paid :</string>
    <string name="rr_pay">New Payment</string>
    <string name="rr_date">Date :</string>
    <string name="request_details">Request details</string>
    <string name="paying_with_cash">Paying with cash</string>
    <string name="enter_amount">Enter amount</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="rate_craftsman">Rate craftsman</string>
    <string name="rate">Rate</string>
    <string name="thanks_for_rating">Thanks for rating!</string>
    <string name="payment_successful">Payment successful!</string>
    <string name="comment_added">Comment added!</string>
    <string name="price_colon">Price :</string>
    <string name="repair_status_paid">Placen</string>
    <string name="repair_status_refused">Odbijen</string>
    <string name="repair_status_accepted">Prihvacen</string>
    <string name="first_name">First name</string>
    <string name="register_button">Register</string>
    <string name="back">Back</string>
    <string name="profile_e_mail">E-mail :</string>
    <string name="request_repair">Request Repair</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profession_colon">Profession :</string>
    <string name="e_mail_colon">E-mail :</string>
    <string name="new_payment">New payment</string>
    <string name="new_request">New request</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="confirm_request">Confirm request</string>
    <string name="add_comment">Add comment</string>
    <string name="paying_method">Paying method :</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="request_sent">Request sent</string>
    <string name="repair_status_on_hold">Na cekanju</string>
    <string name="save_changes">Save changes</string>
    <string name="password_colon">Password :</string>
    <string name="show_comments">Show comments</string>
    <string name="hide_comments">Hide comments</string>
    <string name="profession">Profession</string>
    <string name="name">Name</string>
    <string name="my_craftsmen">My craftsmen</string>
    <string name="all_craftsmen">All craftsmen</string>
    <string name="selected_user">Selected user</string>
    <string name="rr_severity">Severity :</string>
    <string name="severity_low">Low</string>
    <string name="severity_medium">Med</string>
    <string name="severity_high">High</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="user">User</string>
    <string name="craftsman">Craftsman</string>
    <string name="set_filters">Set filters</string>
    <string name="sort">Sort</string>
    <string name="client">Client</string>
    <string name="location">Location</string>
    <string name="severity">Severity</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="client_colon">Client :</string>
    <string name="location_colon">Location :</string>
    <string name="district_colon">District :</string>
    <string name="address_colon">Address :</string>
    <string name="district">District</string>
    <string name="sort_by">Sort by :</string>
    <string name="repair_status_offered">Ponudjen</string>
    <string name="status_colon">Status :</string>
    <string name="show_filter">Show filter</string>
    <string name="hide_filter">Hide filter</string>
    <string name="repair_request_refused">Repair request refused</string>
    <string name="price">Price</string>
    <string name="repair_request_accepted">Repair request accepted</string>
    <string name="craftsman_successfully_paid">Craftsman successfully paid</string>
    <string name="confirm_payment">Confirm payment</string>

    <string-array name="sort">
        <item>Description</item>
        <item>Client</item>
        <item>District</item>
        <item>Address</item>
        <item>Severity</item>
        <item>Status</item>
        <item>Date</item>
    </string-array>
</resources>
