<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etRFirstName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etRLastName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textCapSentences"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRFirstName" />

    <EditText
        android:id="@+id/etREmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etRFirstName"
        app:layout_constraintTop_toBottomOf="@+id/etRLastName" />

    <EditText
        android:id="@+id/etRProfession"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/profession"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/etRLastName"
        app:layout_constraintTop_toBottomOf="@+id/etRLastName" />

    <EditText
        android:id="@+id/etRUsername"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etREmail"
        app:layout_constraintTop_toBottomOf="@+id/etREmail" />

    <EditText
        android:id="@+id/etRPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/etRLastName"
        app:layout_constraintTop_toBottomOf="@+id/etRProfession" />

    <Button
        android:id="@+id/btRRegister"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_primary"
        android:text="@string/register_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRPassword" />

    <ImageButton
        android:id="@+id/btBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/etRPassword"
        app:layout_constraintStart_toStartOf="@+id/etRUsername"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbRUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:text="@string/user" />

        <RadioButton
            android:id="@+id/rbRCraftsman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craftsman" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>