<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_item_drawer_group_top">
        <item android:id="@+id/menu_item_drawer_repair_requests"
            android:icon="@drawable/ic_repair_requests"
            android:title="@string/repair_requests"></item>
        <item android:id="@+id/menu_item_drawer_search_craftsman"
            android:icon="@drawable/ic_search_craftsman"
            android:title="@string/search_craftsman"></item>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_item_drawer_group_bottom">
        <item android:id="@+id/menu_item_drawer_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"></item>
    </group>

</menu>