<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSFHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="Search Filter"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSFDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSFHeader" />

    <EditText
        android:id="@+id/etSFClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/client"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSFDescription" />

    <EditText
        android:id="@+id/etSFLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/location"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSFClient" />

    <EditText
        android:id="@+id/etSFDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/ur_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSFLocation" />

    <TextView
        android:id="@+id/tvSFSeverity"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/rr_severity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSFDate" />

    <RadioGroup
        android:id="@+id/rgNRSeverity"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSFSeverity"
        app:layout_constraintStart_toEndOf="@+id/tvSFSeverity"
        app:layout_constraintTop_toTopOf="@+id/tvSFSeverity">

        <RadioButton
            android:id="@+id/rbNRLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severity_low" />

        <RadioButton
            android:id="@+id/rbNRMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severity_medium"/>

        <RadioButton
            android:id="@+id/rbNRHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severity_high" />
    </RadioGroup>

    <Button
        android:id="@+id/btSFCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btSFConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btSFConfirm" />

    <Button
        android:id="@+id/btSFConfirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_gold"
        android:text="Confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgNRSeverity" />



</android.support.constraint.ConstraintLayout>