<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableRow
        android:id="@+id/trRRCCHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvRRCCDescription"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingEnd="5dp"/>
        <TextView
            android:id="@+id/tvRRCCDate"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/ur_date"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingStart="5dp"/>
        <TextView
            android:id="@+id/tvRRCCSeverity"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/severity"
            android:textSize="14sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvRRCCStatus"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/ur_status"
            android:textSize="14sp"
            android:gravity="center"/>

    </TableRow>

    <RelativeLayout
        android:id="@+id/rlDistancerFooter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/trRRCCHeader"/>

</android.support.constraint.ConstraintLayout>