<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etSCFirstOrLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSCProfession"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:hint="@string/profession"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSC"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/etSCProfession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etSCFirstOrLastName">

        <RadioButton
            android:id="@+id/rbSCAllWorkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_craftsmen" />

        <RadioButton
            android:id="@+id/rbSCMyWorkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_craftsmen" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/tlSC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSCProfession">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ur_craftsman"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profession"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </TableRow>

        <ListView
            android:id="@+id/lvSC"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/table_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSCProfession">


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/search_craftsman"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>